...
                app:boxStrokeColor="@drawable/text_input_outline_color"
                app:hintTextColor="@drawable/text_input_hint_color"
                app:cursorColor="@color/white"
                app:errorTextColor="@color/white">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/emailSignIn"
                    android:layout_width="match_parent"
                    android:layout_height="61dp"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    android:inputType="textEmailAddress" />
            </com.google.android.material.textfield.TextInputLayout>
...
                app:boxStrokeColor="@drawable/text_input_outline_color"
                app:hintTextColor="@drawable/text_input_hint_color"
                app:errorTextColor="@color/white"
                app:cursorColor="@color/white">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/passwordSignIn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"/>
            </com.google.android.material.textfield.TextInputLayout>
...
                android:gravity="start"
                android:paddingHorizontal="5dp"
                android:visibility="gone"/>

            <!-- Sign In Button -->
            <Button
                android:id="@+id/signInButtonAuthToHome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:text="@string/action_sign_in"
                android:textAllCaps="false" />
        </LinearLayout>
...
