...
    <item
        android:id="@+id/page_myHistory"
        android:enabled="true"
        android:icon="@drawable/ic_history"
        android:title="History"/>
    <item
        android:id="@+id/page_myProfile"
        android:enabled="true"
        android:icon="@drawable/ic_person"
        android:title="Profile"/>
</menu>
